extra space on left fix

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header {
   left: 0;
   width: 100%;
   background-color: rgb(36, 120, 189);
-  padding: 10px;
+  padding: 10px 0;
 }
 
 nav a:visited,
@@ -79,8 +79,8 @@ main {
 
 footer {
   display: block;
+  padding: 15px 0;
   width: 100%;
-  padding: 15px;
   background-color: brown;
 }
 
@@ -95,6 +95,27 @@ aside {
 
 img > aside {
     margin-top: 5em;
+}
+
+.container {
+  background-color: red;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.container > .image {
+  flex: 1 0 0%;
+  text-align: right;/* and here*/
+}
+.image > img {
+  vertical-align: top;/* here */
+  max-width: 100%;
+  max-height: 300px;
+}
+.container > .text {
+  flex: 2 0 0%;
+  /* and eventually */
+  
+  margin: auto 0;
 }
 
 article {
@@ -173,7 +194,7 @@ h1 {
   }
 
   aside {
-    margin-left: 2%;
+    margin-right: 2%;
   }
 
   .columns-desktop {
